--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light corBorda">
       <a class="navbar-brand" href="{% url 'home'%}">Fondue delícia</a>
-      <a class="navbar-brand" href="#"
+      <a class="navbar-brand" href="{% url 'ver_carrinho' %}"
         >{{carrinho}}x<svg
           xmlns="http://www.w3.org/2000/svg"
           width="1.2em"
